# cookiecutter-cpp-project

./: CHANGELOG  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: CMakeLists.txt  README.md
{{ cookiecutter.project_name }}/src/: {{ cookiecutter.project_name }}.cpp
{{ cookiecutter.project_name }}/tests/: test_{{cookiecutter.project_name|lower}}.cpp
